syntax = "proto3";

package cave_telem;

service CaveTelemetry {
  rpc SendTelemetry (Telemetry) returns (Ack);
}

message Telemetry {
  string user_id = 1;
  int64 time_execution = 2;
  bool valid_result = 3;
  string timezone = 4;
  string version = 5;
  string id_docker = 6;
}

message Ack {
  string message = 1;
}
